# full-self-crawl-orchestrator

./: .env.example  .gitignore  AGENT_INTERFACE.md  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  ORCHESTRATOR.md  README.md  SYSTEM_README.md  USAGE_EXAMPLE.md  analysis_empty_result.py  architecture_analysis.py  complete_analysis_report.py  deep_analysis.py  deep_analysis_en.txt  demo_codepen_access.py  demo_config.yaml  demo_final_no_unicode.py  docker-compose.yml  docker_agent_test.py  final_demo.py  final_demo_clean.py  github_sync_guide.md  integration_demo.py  project_summary.md  pure_text_demo.py  pyproject.toml  real_agent_test.py  real_agent_test_clean.py  report_en.txt  run_codepen_demo.py  run_local.py  simple_demo.py  test_integration.py  test_integration_simple.py  test_orchestrator_flow.py  validate_implementation.py  validation_final.py
.claude/: settings.local.json
config/: orchestrator.yaml
examples/: README.md  curl_examples.sh  python_client.py
migrations/: 001_initial.sql  002_add_task_tables.sql
src/orchestrator/: __init__.py  api.py  config.py  main.py  models.py  orchestrator.py  utils.py
src/orchestrator/execution/: __init__.py  chatbox.py  presenter.py
src/orchestrator/management/: __init__.py  agent_runner.py  monitor.py  scheduler.py  state_manager.py
src/orchestrator/storage/: __init__.py  postgres_store.py  redis_store.py
src/orchestrator/strategic/: __init__.py  requirement_analyzer.py  result_aggregator.py  site_discovery.py
tests/: __init__.py
tests/unit/: test_management.py  test_strategic.py
